--- a/redmine/docker-compose.yml
+++ b/redmine/docker-compose.yml
@@ -11,11 +11,11 @@ redmine:
     DB_USER: postgres
     DB_PASS: postgres
   volumes:
-    data: /home/redmine/data
+    - "data/redmine:/home/redmine/data"
 postgresql:
   build: postgresql
   environment:
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: postgres
   volumes:
-    data: /var/lib/postgresql/data
+    - "data/postgresql:/var/lib/postgresql/data"
